# pyArchimate

./: .codecov.yml  .env.sample  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AI.md  ArchiToolGap.md  CHANGELOG.md  CLAUDE.md  CONCRETE_REMEDIATION_EDITS.md  IMPLEMENTATION_SUMMARY.md  MyModel.xml  P3_PHASE1_COMPLETION_SUMMARY.md  PHASE_6B_SUMMARY.md  PHASE_7_8_WORK_SUMMARY.md  PHASE_7_RELEASE_STATUS.md  README.md  REMEDIATION_ANALYSIS.md  REMEDIATION_SUMMARY.md  SPECKIT_ANALYSIS_SUMMARY.md  TODO.md  coverage.json  demo_archimate.xml  how_to_build.md  model.ipynb  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  test_elements.archimate  test_properties.archimate  test_relations.archimate
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  cleanup-runs.yml  release.yml
.sonarlint/: connectedMode.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: P3_AUDIT_ELEMENT_CLASS.md  P3_AUDIT_MODEL_CLASS.md  P3_DESIGN_CONTAINMENT.md  P3_DESIGN_MASTER.md  P3_DESIGN_VISUAL_STYLE.md  P3_FOLDER_VS_GROUPING.md  P3_IMPLEMENTATION_NOTES.md  archiReader.rst  archiWriter.rst  archimateWriter.rst  architecture.rst  arisAMLReader.rst  changelog.rst  concepts.rst  conf.py  constants.rst  csvWriter.rst  diagrams.rst  element.rst  enums.rst  exceptions.rst  getting-started.rst  hierarchy-styling-overview.rst  index.rst  modules.rst  p3-quick-reference.rst  pyArchimate.rst  relationship.rst  requirements.txt  src.rst  tutorial.md  view.rst
docs/_static/: custom.css
docs/_templates/: searchbox.html
docs/api/: element.rst  model.rst  viewpoints.rst
docs/diagrams/: README.md  activity.puml  c4_component.puml  c4_container.puml  c4_context.puml  c4_deployment.puml  class.puml  communication.puml  component.puml  composite.puml  context.puml  deployment.puml  object.puml  package.puml  sequence.puml  state.puml
docs/examples/: hierarchy_examples.rst  styling_examples.rst
docs/features/: layout.rst
docs/guides/: element-hierarchy.rst  extending.rst  junction-types.rst  visual-styling.rst
docs/tutorial/: tutorial.ipynb  tutorial.md
examples/: My Model.xml  my_model.archimate  new_model.py  profile.archimate  smoke_test.py
scripts/: README.md  build_docs.sh  build_docs_release.sh  check_layer_boundaries.py  check_sonarcloud.py  create_documentation.sh  extract_archimate_symbols.py  generate_ai_docs.py  pre_commit_checks.sh  pre_feature.sh  pre_merge_checks.sh  pre_push_checks.sh  release.sh  render_diagrams.sh
specs/: NONFUNCTIONALS.md  PROJECT_CONSTITUTION.md  PROJECT_SPECIFICATION.md  TECHNICAL.md
specs/001-modularize-model/: data-model.md  extraction-plan.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-sonarqube-remediation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-documentation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-archimate-spec-compliance/: data-model.md
specs/004-archimate-spec-compliance/: Archimategap.md  P3_NOTATION_SPEC.md  P3_PLANNING_SUMMARY.md  P3_TASKS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-archimate-notation-support/: README.md  data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/006-archi-tool-compliance/: P3_PHASE1_EXECUTION_GUIDE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-fix-writers-bugs/: IMPLEMENTATION.md  README.md  plan.md  spec.md  tasks.md
specs/008-fix-archimate-format-reading/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-quality-uplift/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-restructure-sphinx-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-view-auto-layout/: ARCHITECTURE.md  LAYOUT_QUICKSTART.md  NON_BETA_ROADMAP.md  PHASE_6B_SUMMARY.md  PHASE_7_8_WORK_SUMMARY.md  RELATIONSHIP_RENDERING_TASKS.md  auto-layout-specifications.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-enhance-svg-view/: plan.md  spec.md  tasks.md
specs/013-layout-routing-refactor/: data-model.md  phase2-routing-quality.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-complexity-precommit/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
src/: setup.py
src/parseAML/: AMLparser.py  ARISAMLExport_OEF.xml  ARISAMLExport_OEF2.xml  Capability Agreement Overview BE Realization.archimate  allowedPatterns.py  archiObjects.py  cnv.py  getOEF.py  logger.py  parseAML.py  parseAML.spec  properties.csv  relationships.csv  requirements.txt  testData1.aml  testData2.aml  testData2.xml  test_Aris_template.xml  toCSV.py  type_mapping.py
src/pyArchimate/: __init__.py  _legacy.py  checker_rules.yml  constants.py  element.py  enums.py  exceptions.py  logger.py  model.py  pyArchimate.py  relationship.py  view.py  viewpoint.py  viewpoint_registry.py
temp/: bug.py  demo-good.xml  demo.xml  demo_good.archimate  export_demo.archimate
tests/: MyModel.xml  Untitled.archimate  _helpers.py  aris.aml  myModel.archimate  out.archimate  out.csv  out.xml  out1.xml  out_elements.csv  out_properties.csv  out_relations.csv  profile.archimate  test.archimate  test_aml_reader.py  test_archi_reader.py  test_archi_writer.py  test_pyArchimate.py
tests/features/: business_interaction.feature  environment.py  grouping.feature  influence_strength.feature  integration.feature  placeholder.feature  relationship_documentation.feature  viewpoint_assignment.feature  viewpoint_filtering.feature  viewpoint_roundtrip.feature  visual_style.feature
tests/fixtures/: Elements.archimate  corrupted.archimate  generate_synthetic_model.py  no_model_xml.archimate  symbols.archimate  synthetic_large.archimate  synthetic_large.xml  test1.archimate  (+4 more)
(+248 files in other folders)
