[project]
name = "pyArchimate"
version = "1.0.0"
authors = [
  { name="Xavier Mayeur", email="xavier@mayeur.be" }
]
description = "A library to create & manage Archimate files"
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["lxml (>=6.0.4,<7.0.0)", "oyaml (>=1.0,<2.0)", "pillow (>=12.2.0,<13.0.0)", "requests (>=2.33.1,<3.0.0)", "pytest (>=9.0.3,<10.0.0)"]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/pyArchimate/pyArchimate"
"Bug Tracker" = "https://github.com/pyArchimate/pyArchimate/issues"

[[tool.poetry.packages]]
include = "pyArchimate"
from = "src"

[dependency-groups]
dev = [
    "commitizen>=4.11.0,<5.0.0",
    "snakeviz>=2.2.2,<3.0.0",
    "locust (>=2.43.3,<3.0.0)",
]

testing = [  # runtime tooling required to exercise the test suite
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "behave>=1.3.3,<2.0.0",
    "rapidfuzz>=3.14.3,<4.0.0",
    "jaraco.classes>=3.4.0,<4.0.0",
    "jaraco.context>=6.1.1,<7.0.0",
    "jaraco.functools>=4.4.0,<5.0.0",
    "pytest-httpx>=0.24.0,<1.0.0",
    "httpx>=0.27.0,<0.32.0",
]

lint = [
    "types-requests>=2.32.4.20250913,<3.0.0",
    "types-pyyaml>=6.0.12.20250915,<7.0.0",
    "mypy>=1.19.1,<2.0.0",
    "pyright>=1.1.407,<2.0.0",
    "ruff>=0.14.10,<1.0.0",
    "pymarkdownlnt>=0.9.35",
    "lxml-stubs (>=0.5.1,<0.6.0)",
    "setuptools (>=82.0.1,<83.0.0)",
    "types-setuptools (>=82.0.0.20260408,<83.0.0.0)",
]

docs = [
    "sphinx (>=9.1.0,<10.0.0); python_version >= '3.12'",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0); python_version >= '3.12'",
]

[tool.setuptools.package-dir]
"" = "src"
pyArchimate = "src/pyArchimate"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyArchimate*"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = true
reportUnusedVariable = "warning"
reportMissingTypeStubs = "none"
reportUnknownMemberType = false
extraPaths = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]

[tool.mypy]
strict = true
mypy_path = "src"
explicit_package_bases = true
show_error_codes = true
ignore_missing_imports = false
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
#plugins = [
#  "pydantic.mypy"
#]
exclude = [
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "C901",   # complexity — legacy monolithic functions not yet refactored
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "docs",
    "build",
    "dist",
    "env",
    "ENV",
    "*.log",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = [".", "src/pyArchimate"]  # "." lets tests use `from src.pyArchimate import …`; "src/pyArchimate" lets readers/writers use bare `from pyArchimate import …` fallback
testpaths = ["./tests/legacy_unit", "./tests/legacy_integration", "./tests/unit", "./tests/security", "./tests/integration", "./tests/api"]
python_files = "*_test.py test_*.py *_spec.py"
addopts = """
 --cov=src
 --cov-report=xml:build/coverage.xml
 --cov-report=term-missing
--junitxml=build/unit-tests.xml
"""
cache_dir = "/tmp/.pytest_cache"


[tool.pytest-asyncio]
asyncio_default_fixture_loop_scope = "module"
asyncio_mode = "auto"

[tool.coverage.run]
branch = false
source = ["src"]
omit = [
    "tests/*",
    "src/setup.py",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "build/coverage-reports"

[tool.coverage.xml]
output = "build/coverage.xml"

[tool.behave]
paths = [
    "tests/features/"
]

[tool.pymarkdown]
# MD010 - no hard tabs
plugins.md010.enabled = true
# MD007 - unordered list indentation
plugins.md007.indent = 4
# MD004 - unordered list style
plugins.md004.style = "dash"

[tool.pymarkdown.plugins.md013]
line_length = 120

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
